refactor: modernize infrastructure, enhance traceability, and improve code quality
- Resolved IntelliJ/Gradle integration issues by consolidating project configuration and adding a root build script.
- Migrated deprecated Hibernate @Check annotations to the standard JPA 3.2 @CheckConstraint.
- Adopted Java 25 unnamed variables (_) in JPA specifications to resolve unused parameter warnings.
- Enhanced storage and event publishing ports to return metadata (ETag, Kafka offsets) for improved traceability.
- Persisted ETag and external job IDs in the database to support auditability and worker tracing.
- Integrated Checkstyle linting across all modules and eliminated star import violations.
- Applied JSpecify nullability annotations to critical filter paths to ensure null-safety compliance.
- Improved test robustness with try-with-resources and explicit verification of security assertions.
- Consolidated database schema migrations into a clean V1 baseline.